Add some citation

--- a/_layouts/deceased.html
+++ b/_layouts/deceased.html
@@ -30,9 +30,7 @@
 
       <h1>{{ page.name }}</h1>
 
-      <h3>{{ page.birthDate }} - {{ page.deathDate }}</h3>
-
-      <p><img src="{{ "/assets/images/" | append: page.mainPhoto | relative_url }}" alt="" /></p>
+      <h3>{{ page.birthDate }} - {{ page.deathDate }} ({{ page.deathDate | timeago }})</h3>
 
       {{ content }}
 
