--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,4 @@
 ---
 ---
 
-@import "jekyll-theme-minimal";
-@import "premonition";
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
