feat: add dark theme
Former-commit-id: dfabdfef06b6e760e5cbcbcecae9fdd969661ebc

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-3 bg-light h-card">
+<footer class="footer mt-auto py-3 bg-secondary h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
   <div class="container py-3">
     <p class="h5 my-2">
