--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
     <div class="container">
       <a class="navbar-brand" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
     </div>
