--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -22,7 +22,7 @@ layout: default
                 <img src="{{ photo.path | relative_url }}" class="img-thumbnail d-block m-auto" style="max-height: 90%;">
                 {% if photo.caption %}
                 <div class="text-center">
-                    <p class="font-weight-bold text-black">{{ photo.caption }}</p>
+                    <p class="font-weight-bold">{{ photo.caption }}</p>
                 </div>
                 {% endif %}
             </div>
