fix: skip empty photos on grave page

--- a/_layouts/grave.html
+++ b/_layouts/grave.html
@@ -57,6 +57,7 @@ layout: default
     </div>
 </div>
 
+{% if page.photos %}
 <hr>
 
 <div class="container px-4 pt-3">
@@ -77,3 +78,4 @@ layout: default
         {% endfor %}
     </div>
 </div>
+{% endif %}
