--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -1,9 +1,133 @@
 // Bootstrap
-@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css");
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
+//@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css");
+//@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
 
 // Font Awesome
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
+//@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
 
 // Dark theme
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css");
+//@import url("https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  html {
+    @apply bg-neutral-800;
+    @apply text-white;
+    @apply antialiased;
+  }
+
+  header {
+    @apply bg-neutral-600;
+    @apply py-3 lg:py-5;
+    @apply mb-10;
+
+    nav {
+      @apply mx-[8%];
+      @apply flex;
+      @apply text-lg lg:text-3xl;
+    }
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply mt-3 lg:mt-6;
+  }
+
+  h1 {
+    @apply text-4xl lg:text-6xl font-extralight;
+  }
+
+  h2 {
+    @apply text-3xl lg:text-5xl font-light;
+  }
+
+  .columns-auto {
+    @apply justify-center mx-auto;
+    @apply flex flex-wrap;
+  }
+
+  .column {
+    @apply flex-shrink-0;
+  }
+
+  .card {
+    @apply block;
+    @apply border border-solid border-slate-700;
+    @apply rounded;
+    @apply shadow;
+    @apply max-w-xs;
+
+    @apply relative; // for stretched links to work
+
+    @apply text-center;
+
+    .card-title {
+      @apply mt-4;
+      @apply px-10 pb-2;
+
+      @apply text-2xl;
+    }
+
+    .card-text {
+      @apply m-2;
+    }
+  }
+
+  blockquote {
+    @apply m-6;
+
+    @apply font-medium italic text-gray-400;
+  }
+
+  .stretched-link::after {
+    content: "";
+    @apply z-10;
+    @apply absolute;
+    @apply inset-0;
+    @apply bg-transparent;
+    @apply pointer-events-auto;
+  }
+
+  .btn {
+    @apply bg-sky-900;
+    @apply rounded;
+    @apply block;
+
+    @apply py-2;
+    @apply px-3;
+  }
+
+  .container {
+    @apply my-4;
+  }
+
+  hr {
+    @apply border-slate-700;
+  }
+
+  .alert {
+    @apply rounded;
+    @apply bg-yellow-800;
+    @apply p-6;
+  }
+
+  p {
+    @apply m-3;
+  }
+
+  .carousel {
+    @apply relative;
+
+    .carousel-indicators {
+      button {
+        @apply flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer focus:outline-none;
+      }
+    }
+
+    .carousel-inner {
+      @apply relative w-full overflow-hidden;
+    }
+  }
+}
