--- a/assets/style/app.scss
+++ b/assets/style/app.scss
@@ -1,13 +1,3 @@
-// Bootstrap
-//@import url("https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css");
-//@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css");
-
-// Font Awesome
-//@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
-
-// Dark theme
-//@import url("https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -63,13 +53,17 @@
   .card {
     @apply block;
     @apply border border-solid border-slate-700;
-    @apply rounded;
-    @apply shadow;
+    @apply rounded-2xl;
+    @apply shadow-2xl;
     @apply max-w-xs;
 
     @apply relative; // for stretched links to work
 
     @apply text-center;
+
+    img {
+      @apply rounded-t-2xl;
+    }
 
     .card-title:not(:empty) {
       @apply mt-4;
@@ -81,6 +75,14 @@
     .card-text:not(:empty) {
       @apply m-2;
     }
+
+    a {
+      @apply rounded-t-none;
+    }
+  }
+
+  .card-link {
+    @apply cursor-pointer;
   }
 
   blockquote {
@@ -100,11 +102,15 @@
 
   .btn {
     @apply bg-sky-900;
-    @apply rounded;
+    @apply rounded-2xl;
     @apply block;
 
     @apply py-2;
     @apply px-3;
+  }
+
+  .btn-gray {
+    @apply bg-slate-600;
   }
 
   .container {
