feat: use nuxt/image-edge for images
Former-commit-id: 5c4ffbd8c2daf785422ff34236a33126452cc23b

--- a/assets/style/modal.scss
+++ b/assets/style/modal.scss
@@ -6,7 +6,7 @@
     @apply hidden;
 
     img {
-      @apply block absolute;
+      @apply block;
       @apply max-h-screen max-w-full;
       @apply p-5;
     }
